2009.10.26

* Fixed ReST formatting issues in README.
* Reorganzied docs and updated setup.py with the changes.
* Updated manifest file.
* Added install docs.

2009.02.03

* Removed debugger break unintentionally committed and left in trunk (thanks
Jehiah!).

2009.01.06

* Added config fixes from Shaival Varma.
* Fixed typo in script filename.
* Fixed PYTHONPATH in defs.sh.

2008.10.12

* Updated TODO as a result of all the changes done over the past week,
including the adjustment of version number in the roadmap and rearrangement of
features.

2008.10.11

* Created a new subpackage for web stuff.
* Moved admin subpackage into web subpackage.
* Added Twisted REST resource.
* Added an rpc module.
* Added dummy util classes for impersonating missing libs.
* Started working on an API for RPC/REST access.
* Updated TODO.

2008.10.10

* Removed commented out code.
* Updated createCertificate to use a random serial number.
* Added new coniguration rendering options based on Jehiah's patches; addresses
bug 277899.
* Broke up the RunningPage content into different methods.
* Updated getHeader and getFooter methods.
* Added content type methods.
* Removed the need to pass the config file to the config change checker, now
that Jehiah's change to the config object has been added: storing the filename
on an attribute.
* Pulled the save config code out of manager.checker and put it in a util
function.

2008.10.09

* Added a couple more useful methods to the tracker for managing host
resetting and updated the checker to make use of one of them.
* Added code for putting all hosts back into rotation on the condition that
there are no good hosts remaining.
* Replaced old logging references in manager.checker with twisted.python.log
calls.
* Added missing call to configuration method in
application.director.configuredProxyManagerFactory; fix submitted by Shaival
Varma and addresses bug 255498.
* Removed all references to custom logging and replaced with Twisted logging.